# tempit

./: .codacy.yml  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  tempit.plugin.zsh  tempit.py  test_tempit.py
.github/workflows/: python-app.yml  python-package.yml  python-publish.yml
docs/superpowers/plans/: 2026-03-23-architecture-clarity.md
docs/superpowers/specs/: 2026-03-23-architecture-clarity-design.md
tempit/: __init__.py  cli.py  core.py  render.py  services.py  stats.py  storage.py
tempit/shell/: init.sh
tests/: test_cli.py  test_core.py  test_render.py  test_stats.py
