[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tempit"
version = "0.1.0"
description = "Manage and jump into temporary working directories"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Idir Oura", email = "idir.oura@protonmail.com" }]
dependencies = [
    "humanize",
    "tabulate",
    "termcolor"
]

[project.scripts]
tempit = "tempit.cli:main"

[tool.poetry]
packages = ["tempit"]
include = [
  { path = "tempit/shell/init.sh" }
]
