[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "tempit-manager"
dynamic = ["version"]
description = "Manage and jump into temporary working directories"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "Idir Oura", email = "idir.oura@protonmail.com" }]
dependencies = [
    "humanize",
    "rich",
    "typer",
]

[project.scripts]
tempit = "tempit.cli:main"

[tool.poetry]
version = "0.0"
packages = [{ include = "tempit" }]
include = [
  { path = "tempit/shell/init.sh" }
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
flake8 = ">=7.3.0,<8.0.0"
ruff = ">=0.13.0,<0.14.0"
mypy = ">=1.18.1,<2.0.0"
pylint = ">=3.3.8,<4.0.0"
